data/derived/sp14/progs/unify/prog3701.ml.out
Characters 43-44:
  let fixpoint (f,b) = wwhile (wwhile (f, b),b);;
                                             ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
